--- a/contact.html
+++ b/contact.html
@@ -19,48 +19,49 @@
 					<li class="index-li"><a href="index.html">Home</a></li>
 					<li class="index-li"><a href="products.html">Products</a></li>
 					<li class="index-li"><a href="pricing.html">Pricing</a></li>
-					<li class="index-li"><a href="contact.htnml">Contact</a></li>
+					<li class="index-li"><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>	
 		</header>
-		<main id="products-main">
-			<form>
+		<main id="contact-main">
+			<form id="contact-form">
 				<fieldset>
-					<legend> </legend>
+					<legend>contact information</legend>
 					<ul>
-						<li>
+						<li class="form-li">
 							<label for="flname">Name </label>
 							<input type="text" name="flname" />
 						</li>
-						<li>
+						<li class="form-li">
 							<label for="email">E-Mail address </label>
 							<input type="email" name="email" />
 						</li>
-						<li>
+						<li class="form-li">
 							<label for="message">Message </label>
-							<textarea></textarea>
+							<textarea type="message" rows="10" cols="20"></textarea>
 						</li>
 						<li>
-							<button type="submit">&gt; Send email</button>
+							<button type="submit">Send Message</button>
 						</li>	
 					</ul>
 				</fieldset>
-			</form>		
+			</form>	
+		<aside id="contact-aside">
+			<figure id="contact-img-1">
+				<img src="img/pencil.jpg" alt="" class="products-img">
+				<figcaption>tekst</figcaption>
+			</figure>
+			<figure id="contact-img-2">
+				<img src="img/pencil.jpg" alt="" class="products-img">
+				<figcaption>tekst</figcaption>
+			</figure>
+			<figure id="contact-img-3">
+				<img src="img/pencil.jpg" alt="" class="products-img">
+				<figcaption>tekst</figcaption>
+			</figure>
+		</aside>	
 		</main>
-		<aside id="products-aside">
-			<figure id="products-img-1">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
-			</figure>
-			<figure id="products-img-2">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
-			</figure>
-			<figure id="products-img-3">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
-			</figure>
-		</aside>
+
 		<footer class="grid-footer">
 			<p class="grid-copyright">
 				<small>&copy; Copyright Sudi Huijzen</small>	
