--- a/pricing.html
+++ b/pricing.html
@@ -19,7 +19,7 @@
 					<li class="index-li"><a href="index.html">Home</a></li>
 					<li class="index-li"><a href="products.html">Products</a></li>
 					<li class="index-li"><a href="pricing.html">Pricing</a></li>
-					<li class="index-li"><a href="contact.htnml">Contact</a></li>
+					<li class="index-li"><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>	
 		</header>
