--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<header id="index-header">
 			<img src="img/pencil.jpg" alt="" class="banner-img">
 			<section>
-				<h1>Title</h1>
-				<h2>Payoff</h2>
+				<h1>Extreme sports</h1>
+				<h2>Extreme sports technologies</h2>
 			</section>
 			<a href="#" id="hamburger-menu">Menu</a>	
 		</header>
@@ -30,11 +30,13 @@
 						<img src="img/pencil.jpg" alt="" class="index-img">
 						<figcaption>tekst</figcaption>
 					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+					<h2>Skateboarding</h2>
+					<p>The skateboard was invented in the late 1940s but didn’t become popular 
+					since the early 1990s. Since then, the extreme sport has been making strides towards 
+					better ways to control the ways to ride the board. From different wheels, board decks and 
+					trucks (the part that connects the wheels to the board). Everything to go faster, jump higher 
+					or have more control while skating. Over the years there have been new technologies developed 
+					for either competition or just a fun way to get around on the street.  
 					</p>
 				</article>
 				<article>
@@ -42,11 +44,12 @@
 						<img src="img/pencil.jpg" alt="" class="index-img">
 						<figcaption>tekst</figcaption>
 					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+					<h2>BMX</h2>
+					<p>BMX bikes have been around since the 1970s. They were inspired by motocross bikes. 
+					So, people who couldn’t ride yet could experience the dirt tracks on their own. But later 
+					it developed itself into its own sport. Since then, there have been major strides in BMX bike 
+					technologies. Mainly focused on materials the make the bike lighter yet keep it as durable is 
+					possible. Also tires and shocks have been improved for the most grip on the track.
 					</p>
 				</article>
 				<article>
@@ -54,22 +57,25 @@
 						<img src="img/pencil.jpg" alt="" class="index-img">
 						<figcaption>tekst</figcaption>
 					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+					<h2>Mountainboarding</h2>
+					<p>In the 1990s a new way to use a board was invented. Snowboards are usually limited to winter sports 
+					seasons or specialized winter sport tracks halls. 
+					But with mountainboards people can now board downhill on dirt tracks or any other place outside 
+					It requires more durable boards and shock resistance for the wheels. With gaining 
+					popularity and competitions the technology for mountainboards have been making major strides. 
+					Focusing mainly on speed, control, and durability. And because the sport is a bit younger than 
+					other extreme sports the companies are still experimenting with materials.
 					</p>
 				</article>
 			</section>
 			<aside id="index-aside">
 				<ol>
 					<h1>New</h1>
-					<li class="index-li-aside">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</li>
-					<li class="index-li-aside">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</li>
-					<li class="index-li-aside">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</li>
-					<li class="index-li-aside">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</li>
-					<li class="index-li-aside">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</li>
+					<li class="index-li-aside">New protective gear for extreme sports</li>
+					<li class="index-li-aside">New film equipment to film your tricks</li>
+					<li class="index-li-aside">New drone technology to for better film shots</li>
+					<li class="index-li-aside">New specialized gear for extreme winter sports</li>
+					<li class="index-li-aside">New pov view cameras for intimate film experience</li>
 				</ol>
 			</aside>
 		</main>
