--- a/products.html
+++ b/products.html
@@ -10,8 +10,8 @@
 		<header class="products-header">
 			<img src="img/pencil.jpg" alt="" class="grid-banner-img">
 			<section class= "grid-header-title">
-				<h1>Title</h1>
-				<h2>Payoff</h2>
+				<h1>Mountainboarding</h1>
+				<h2>Mountainboard innovations</h2>
 				<a href="#" id="hamburger-menu">Menu</a>	
 			</section>		
 			<nav role="navigation" class="grid-nav-header">	
@@ -26,57 +26,50 @@
 
 		<main id="products-main">
 			<article id="products-article-1">
-				<h2>article 1</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+				<h2>Mountainboarding</h2>
+				<p>In the 1990s a new way to use a board was invented. Snowboards are usually limited to winter sports 
+				seasons or specialized winter sport tracks halls. But with mountainboards people can now board downhill on 
+				dirt tracks or any other place outside. It requires more durable boards and shock resistance for the wheels. 
+				With gaining popularity and competitions the technology for mountainboards have been making major strides. Focusing mainly on 
+				speed, control, and durability. And because the sport is a bit younger than other extreme sports the 
+				companies are still experimenting with materials.
 				</p>
 			</article>	
 			<article id="products-article-2">
-				<h2>article 2</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+				<h2>Benefits of mountainboards</h2>
+				<p>Mountain boarding mainly solves the need for specific weather or terrain conditions. It is basically allowing people 
+				to snowboard on dirt, sand, and road. There is no reason to wait for winter sports seasons. Also, there is always a chance 
+				that the winter sport season doesn’t produce enough snow to snowboard on.
+				With de mountainboard you don’t have to rely on those challenges and are you able to practice all year round.
 				</p>
 			</article>
 			<article id="products-article-3">
-				<h2>article 3</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+				<h2>How to use a mountainboard</h2>
+				<p>To use a mountainboard you must make wide turns to get momentum. Since you are strapped to your board you can’t step like a skateboard
+				to go forward. So, it is more similar to snowboarding then skateboarding. In order to turn you have to apply pressure to the front or back of 
+				the board and shift your weight. It is not about just going downhill real fast as you can.
 				</p>
 			</article>			
 			<article id="products-article-4">
-				<h2>article 4</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+				<h2>Who is mountainboarding</h2>
+				<p>Patrick McConnel and Jason Lee made the first mountainboards in California in the United States. The two friends started a company in 1994 
+				called MBS and started manufacturing mountainboards ever since. The users where mainly snowboarders who where bored in the spring and summer months.
+				Looking for a way to keep themselves busy till snowboard season arrives. Now that the sport took off, many extreme sporters are giving it a try.
 				</p>
 			</article>
 			<article id="products-article-5">
-				<h2>artible 5</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+				<h2>What can you expect</h2>
+				<p>In the future we can expect more promotion for mountainboarding. With new cameras that can shoot in different
+				frames per seconds for beautiful slow-motion shots. Or with drones that can film from angles that used to be only 
+				possible with helicopters. People can now make the most entertaining 
+				and cool promotion videos of the sport. That will bring more advertisers and sports events for the sport in the future.
 				</p>
 			</article>
 			<article id="products-article-6">
-				<h2>article 6</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+				<h2>Future innovations</h2>
+				<p>Innovations regarding mountainboards are mainly the same as skateboards. It is about using better materials for the board decks making the
+				wheels more durable and better suited for controlling the board. But now innovation is heading towards motorizing the board. In the beginning it was more a combustion
+				type motor but now innovations are being made towards electric motors. Just like any other extreme sports everything to make you go faster.
 				</p>
 			</article>
 		</main>
