--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,30 @@
 	<meta charset="utf-8" />  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="icon" type="image/extreme-sports-icon" href="img/favicon-logo.png">
+	<meta name="author" content="Sudi Huijzen">
+	<meta name="description" content="Innovations in extreme sport gear">
 </head>
 	<body class="grid-body">	
 		<header class="products-header">
-			<img src="img/pencil.jpg" alt="" class="grid-banner-img">
+			<img src="img/future-logo.png" alt="" class="grid-banner-img">
 			<section class= "grid-header-title">
-				<h1>Title</h1>
-				<h2>Payoff</h2>
-				<a href="#" id="hamburger-menu">Menu</a>	
+				<h1>Contact</h1>
+				<h2>Have any questions?</h2>
 			</section>		
+			<nav class="dropdown">
+			<button class="dropbutton">MENU</button>
+				<section class="dropdown-content">
+					<a href="index.html">Home</a>
+					<a href="products.html">Products</a>
+					<a href="pricing.html">Pricing</a>
+				</section>
+			</nav>	
 			<nav role="navigation" class="grid-nav-header">	
 				<ul class="nav-list">
-					<li class="index-li"><a href="index.html">Home</a></li>
-					<li class="index-li"><a href="products.html">Products</a></li>
-					<li class="index-li"><a href="pricing.html">Pricing</a></li>
-					<li class="index-li"><a href="contact.html">Contact</a></li>
+					<li class="nav-li"><a href="index.html">Home</a></li>
+					<li class="nav-li"><a href="products.html">Products</a></li>
+					<li class="nav-li"><a href="pricing.html">Pricing</a></li>
 				</ul>
 			</nav>	
 		</header>
@@ -48,20 +57,19 @@
 			</form>	
 		<aside id="contact-aside">
 			<figure id="contact-img-1">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
+				<a href="https://www.inholland.nl/"><img src="img/mountainboard-1.jpg" alt="a mountainboard" title="a mountainboard" class="products-img"></a>
+				<figcaption><small>&copy; trampaboards.com</small></figcaption>
 			</figure>
 			<figure id="contact-img-2">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
+				<a href="https://www.inholland.nl/"><img src="img/mountainboard-2.jpg" alt="a mountainboard"  title="a mountainboard" class="products-img"></a>
+				<figcaption><small>&copy; trampaboards.com</small></figcaption>
 			</figure>
 			<figure id="contact-img-3">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
+				<a href="https://www.inholland.nl/"><img src="img/mountainboard-3.jpg" alt="a electric mountainboard"  title="a electric mountainboard" class="products-img"></a>
+				<figcaption><small>&copy; trampaboards.com</small></figcaption>
 			</figure>
 		</aside>	
 		</main>
-
 		<footer class="grid-footer">
 			<p class="grid-copyright">
 				<small>&copy; Copyright Sudi Huijzen</small>	
