--- a/pricing.html
+++ b/pricing.html
@@ -5,204 +5,215 @@
 	<meta charset="utf-8" />  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="icon" type="image/extreme-sports-icon" href="img/favicon-logo.png">
+	<meta name="author" content="Sudi Huijzen">
+	<meta name="description" content="Innovations in extreme sport gear">
 </head>
 	<body class="grid-body">	
 		<header class="products-header">
-			<img src="img/pencil.jpg" alt="" class="grid-banner-img">
+			<img src="img/future-logo.png" alt="logo of the website" title="logo depicting a snowboarder" class="grid-banner-img">
 			<section class= "grid-header-title">
-				<h1>Title</h1>
-				<h2>Payoff</h2>
-				<a href="#" id="hamburger-menu">Menu</a>	
-			</section>		
+				<h1>Extreme sport gear</h1>
+				<h2>prices</h2>	
+			</section>	
+			<nav class="dropdown">
+			<button class="dropbutton">MENU</button>
+				<section class="dropdown-content">
+					<a href="index.html">Home</a>
+					<a href="pricing.html">Products</a>
+					<a href="contact.html">Contact</a>
+				</section>
+			</nav>			
 			<nav role="navigation" class="grid-nav-header">	
 				<ul class="nav-list">
-					<li class="index-li"><a href="index.html">Home</a></li>
-					<li class="index-li"><a href="products.html">Products</a></li>
-					<li class="index-li"><a href="pricing.html">Pricing</a></li>
-					<li class="index-li"><a href="contact.html">Contact</a></li>
+					<li class="nav-li"><a href="index.html">Home</a></li>
+					<li class="nav-li"><a href="products.html">Products</a></li>
+					<li class="nav-li"><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>	
 		</header>
 		<main id="pricing-main">
-			<article id="pricing-article-1">
-				<h2>article 1</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-					labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-					officia deserunt mollit anim id est laborum.
+			<article id="pricing-article">
+				<h2>Mountainboarding</h2>
+				<p>In the 1990s a new way to use a board was invented. Snowboards are usually limited to winter sports seasons or specialized 
+				winter sport tracks halls. But with mountainboards people can now board downhill on dirt tracks or any other place outside. It 
+				requires more durable boards and shock resistance for the wheels. With gaining popularity and competitions the technology for 
+				mountainboards have been making major strides. Focusing mainly on speed, control, and durability.
+				And because the sport is a bit younger than other extreme sports the companies are still experimenting with materials. 
 				</p>
 			</article>	
-			<table id="pricing">
+			<table id="pricing-table">
 				<thead>
-					<caption></caption>
+					<caption>Extreme Sport Gear</caption>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th>Categories</th>
+						<th>Gear</th>
+						<th>Brand</th>
+						<th>Price</th>
+						<th>Size</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>Skateboard</td>
+						<td>Wheels</td>
+						<td>Undercover Wheels</td>
+						<td>&euro; 64.99</td>
+						<td>88 mm</td>
+					</tr>
+					<tr>
+						<td>Skateboard</td>
+						<td>Wheels</td>
+						<td>Chaya Drift</td>
+						<td>&euro; 29.99</td>
+						<td>65 mm</td>
+					</tr>
+					<tr>
+						<td>Skateboard</td>
+						<td>Wheels</td>
+						<td>Undercover Wheels</td>
+						<td>&euro; 55.49</td>
+						<td>84 mm</td>
+					</tr>
+					<tr>
+						<td>Skateboard</td>
+						<td>Deck</td>
+						<td>Roces</td>
+						<td>&euro; 33.49</td>
+						<td>31 inches</td>
+					</tr>
+					<tr>
+						<td>Skateboard</td>
+						<td>Deck</td>
+						<td>Roces</td>
+						<td>&euro; 20.99</td>
+						<td>24 inches</td>
+					</tr>
+					<tr>
+						<td>Skateboard</td>
+						<td>Deck</td>
+						<td>Hydroponic</td>
+						<td>&euro; 49.49</td>
+						<td>32 inches</td>
+					</tr>
+					<tr>
+						<td>Skateboard</td>
+						<td>Deck</td>
+						<td>Hydroponic</td>
+						<td>&euro; 51.99</td>
+						<td>31.5 inches</td>
+					</tr>
+					<tr>
+						<td>Skateboard</td>
+						<td>Truck</td>
+						<td>Carver</td>
+						<td>&euro; 122.99</td>
+						<td>70 mm</td>
+					</tr>
+					<tr>
+						<td>Skateboard</td>
+						<td>Truck</td>
+						<td>Sushi</td>
+						<td>&euro; 14.99</td>
+						<td>5 inch</td>
+					</tr>
+					<tr>
+						<td>BMX</td>
+						<td>Bike</td>
+						<td>Capri</td>
+						<td>&euro; 499.00</td>
+						<td>20 ''</td>
+					</tr>
+					<tr>
+						<td>BMX</td>
+						<td>Frame</td>
+						<td>Chase</td>
+						<td>&euro; 696.84</td>
+						<td>19.5''</td>
+					</tr>
+					<tr>
+						<td>BMX</td>
+						<td>Frame</td>
+						<td>Federal</td>
+						<td>&euro; 399.95</td>
+						<td>21''</td>
+					</tr>
+					<tr>
+						<td>BMX</td>
+						<td>Frame</td>
+						<td>Federal</td>
+						<td>&euro; 566.59</td>
+						<td>20.75''</td>
+					</tr>
+					<tr>
+						<td>Wakeboard</td>
+						<td>Boards cover</td>
+						<td>Gyrol</td>
+						<td>&euro; 39.99</td>
 						<td></td>
 					</tr>
 					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>Wakeboard</td>
+						<td>Boards</td>
+						<td>Jobe</td>
+						<td>&euro; 204.49</td>
+						<td>1.35 m</td>
 					</tr>
 					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>Wakeboard</td>
+						<td>Boards</td>
+						<td>Jobe</td>
+						<td>&euro; 254.99</td>
+						<td>135 cm</td>
 					</tr>
 					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>Wakeboard</td>
+						<td>Boards</td>
+						<td>Jobe</td>
+						<td>&euro; 428.99</td>
+						<td>137 cm</td>
 					</tr>
 					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>Wakeboard</td>
+						<td>Boards</td>
+						<td>Crazyfly</td>
+						<td>&euro; 989.49</td>
+						<td>76.2 cm</td>
 					</tr>
 					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>Longboard</td>
+						<td>Longboard</td>
+						<td>Coolslide</td>
+						<td>&euro; 55.99</td>
+						<td>71 x 21 cm</td>
 					</tr>
 					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>Longboard</td>
+						<td>Longboard</td>
+						<td>Globe</td>
+						<td>&euro; 152.49</td>
+						<td>9.0 inches</td>
 					</tr>
 				</tbody>
 			</table>
-			<figcaption></figcaption>
-		</main>
-		<aside id="pricing-aside">
+			<footer id="pricing-table-footer">
+				<p><small>&copy; Copyright https://www.tradeinn.com/xtremeinn/en</small></p>
+			</footer>
+					<aside id="pricing-aside">
 			<figure id="pricing-img-1">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
+				<a href="https://www.inholland.nl/"><img src="img/mountainboard-1.jpg" alt="a mountainboard" title="a mountainboard" class="products-img"></a>
+				<figcaption><small>&copy; trampaboards.com</small></figcaption>
 			</figure>
 			<figure id="pricing-img-2">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
+				<a href="https://www.inholland.nl/"><img src="img/mountainboard-2.jpg" alt="a mountainboard"  title="a mountainboard" class="products-img"></a>
+				<figcaption><small>&copy; trampaboards.com</small></figcaption>
 			</figure>
 			<figure id="pricing-img-3">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
+				<a href="https://www.inholland.nl/"><img src="img/mountainboard-3.jpg" alt="a electric mountainboard"  title="a electric mountainboard" class="products-img"></a>
+				<figcaption><small>&copy; trampaboards.com/</small></figcaption>
 			</figure>
 		</aside>
+		</main>
 		<footer class="grid-footer">
 			<p class="grid-copyright">
 				<small>&copy; Copyright Sudi Huijzen</small>	
