--- a/products.html
+++ b/products.html
@@ -5,25 +5,33 @@
 	<meta charset="utf-8" />  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="icon" type="image/extreme-sports-icon" href="img/favicon-logo.png">
+	<meta name="author" content="Sudi Huijzen">
+	<meta name="description" content="Innovations in extreme sport gear">
 </head>
 	<body class="grid-body">	
 		<header class="products-header">
-			<img src="img/pencil.jpg" alt="" class="grid-banner-img">
+			<img src="img/future-logo.png" alt="" class="grid-banner-img">
 			<section class= "grid-header-title">
 				<h1>Mountainboarding</h1>
-				<h2>Mountainboard innovations</h2>
-				<a href="#" id="hamburger-menu">Menu</a>	
+				<h2>Mountainboard innovations</h2>	
 			</section>		
+			<nav class="dropdown">
+			<button class="dropbutton">MENU</button>
+				<section class="dropdown-content">
+					<a href="index.html">Home</a>
+					<a href="pricing.html">Pricing</a>
+					<a href="contact.html">Contact</a>
+				</section>
+			</nav>
 			<nav role="navigation" class="grid-nav-header">	
 				<ul class="nav-list">
-					<li class="index-li"><a href="index.html">Home</a></li>
-					<li class="index-li"><a href="products.html">Products</a></li>
-					<li class="index-li"><a href="pricing.html">Pricing</a></li>
-					<li class="index-li"><a href="contact.html">Contact</a></li>
+					<li class="nav-li"><a href="index.html">Home</a></li>
+					<li class="nav-li"><a href="pricing.html">Pricing</a></li>
+					<li class="nav-li"><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>	
 		</header>
-
 		<main id="products-main">
 			<article id="products-article-1">
 				<h2>Mountainboarding</h2>
@@ -37,7 +45,7 @@
 			</article>	
 			<article id="products-article-2">
 				<h2>Benefits of mountainboards</h2>
-				<p>Mountain boarding mainly solves the need for specific weather or terrain conditions. It is basically allowing people 
+				<p>Mountain boarding mainly solves the need for <em>specific weather or terrain conditions</em>. It is basically allowing people 
 				to snowboard on dirt, sand, and road. There is no reason to wait for winter sports seasons. Also, there is always a chance 
 				that the winter sport season doesn’t produce enough snow to snowboard on.
 				With de mountainboard you don’t have to rely on those challenges and are you able to practice all year round.
@@ -52,7 +60,7 @@
 			</article>			
 			<article id="products-article-4">
 				<h2>Who is mountainboarding</h2>
-				<p>Patrick McConnel and Jason Lee made the first mountainboards in California in the United States. The two friends started a company in 1994 
+				<p><strong>Patrick McConnel</strong> and <strong>Jason Lee</strong> made the first mountainboards in California in the United States. The two friends started a company in 1994 
 				called MBS and started manufacturing mountainboards ever since. The users where mainly snowboarders who where bored in the spring and summer months.
 				Looking for a way to keep themselves busy till snowboard season arrives. Now that the sport took off, many extreme sporters are giving it a try.
 				</p>
@@ -69,22 +77,22 @@
 				<h2>Future innovations</h2>
 				<p>Innovations regarding mountainboards are mainly the same as skateboards. It is about using better materials for the board decks making the
 				wheels more durable and better suited for controlling the board. But now innovation is heading towards motorizing the board. In the beginning it was more a combustion
-				type motor but now innovations are being made towards electric motors. Just like any other extreme sports everything to make you go faster.
+				type motor but now innovations are being made towards <strong>electric motors</strong>. Just like any other extreme sports everything to make you go faster.
 				</p>
 			</article>
 		</main>
 		<aside id="products-aside">
 			<figure id="products-img-1">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
+				<a href="https://www.inholland.nl/"><img src="img/mountainboard-1.jpg" alt="a mountainboard" title="a mountainboard" class="products-img"></a>
+				<figcaption><small>&copy; trampaboards.com</small></figcaption>
 			</figure>
 			<figure id="products-img-2">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
+				<a href="https://www.inholland.nl/"><img src="img/mountainboard-2.jpg" alt="a mountainboard"  title="a mountainboard" class="products-img"></a>
+				<figcaption><small>&copy; trampaboards.com</small></figcaption>
 			</figure>
 			<figure id="products-img-3">
-				<img src="img/pencil.jpg" alt="" class="products-img">
-				<figcaption>tekst</figcaption>
+				<a href="https://www.inholland.nl/"><img src="img/mountainboard-3.jpg" alt="a electric mountainboard"  title="a electric mountainboard" class="products-img"></a>
+				<figcaption><small>&copy; trampaboards.com</small></figcaption>
 			</figure>
 		</aside>
 		<footer class="grid-footer">
