index dropdown werkt
maar niet zo als ik dat wil te weinig tijd om flexbox uittezoeken

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 				<h1>Extreme sports</h1>
 				<h2>Extreme sports technologies</h2>
 			</section>
-			<nav class="dropdown-index">
+		</header>
+		<nav class="dropdown-index">
 			<button class="dropbutton-index">MENU</button>
 				<section class="dropdown-content-index">
-					<a href="index.html">Home</a>
-					<a href="pricing.html">Products</a>
+					<a href="products.html">Products</a>
+					<a href="pricing.html">Pricing</a>
 					<a href="contact.html">Contact</a>
 				</section>
-			</nav>	
-		</header>
+		</nav>	
 		<nav role="navigation" class="nav-header">	
 			<ul class="nav-list">
 				<li class="nav-li"><a href="products.html">Products</a></li>
