--- a/pricing.html
+++ b/pricing.html
@@ -20,7 +20,7 @@
 			<button class="dropbutton">MENU</button>
 				<section class="dropdown-content">
 					<a href="index.html">Home</a>
-					<a href="pricing.html">Products</a>
+					<a href="products.html">Products</a>
 					<a href="contact.html">Contact</a>
 				</section>
 			</nav>			
