--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html/>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Home</title>
-	<meta charset="utf-8" />  
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="utf-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="icon" type="image/extreme-sports-icon" href="img/favicon-logo.png">
 	<meta name="author" content="Sudi Huijzen">
@@ -84,8 +84,8 @@
 				</article>
 			</section>
 			<aside id="index-aside">
+			<h1>New technologies</h1>
 				<ol>
-					<h1>New technologies</h1>
 					<li class="index-li-aside">New protective gear for extreme sports</li>
 					<li class="index-li-aside">New film equipment to film your tricks</li>
 					<li class="index-li-aside">New drone technology to for better film shots</li>
