--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html/>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Contact</title>
-	<meta charset="utf-8" />  
+	<meta charset="utf-8">  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="icon" type="image/extreme-sports-icon" href="img/favicon-logo.png">
